--- a/client/src/containers/EducationalDescription.css
+++ b/client/src/containers/EducationalDescription.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #video-container {
@@ -58,4 +59,8 @@ img {
 
 .img-list {
   list-style: none;
+  padding: 0.5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
