--- a/client/src/components/ErrorPage.css
+++ b/client/src/components/ErrorPage.css
@@ -4,7 +4,7 @@ body {
     flex-flow: row wrap;
     align-content: center;
     justify-content: center;
-    background-color: #f3fd64;
+    background-color: #fafd64;
   }
   
   div {
@@ -13,7 +13,8 @@ body {
   }
   
   .number {
-    background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255); 
+    background-color: #f3fd64;
     position: relative;
     font: 900 30vmin "Consolas";
     letter-spacing: 5vmin;
@@ -54,6 +55,7 @@ body {
       font: 400 5vmin "Courgette";
       font-weight: bold;
   }
+
 
 
   .text span {
