--- a/client/src/components/ErrorPage.css
+++ b/client/src/components/ErrorPage.css
@@ -48,6 +48,7 @@ body {
   
   .text {
     font: 400 5vmin "Courgette";
+    color: rgb(140, 0, 255);
     
   }
   
@@ -58,6 +59,4 @@ body {
 
 
 
-  .text span {
-    font-size: 10vmin;
-  }
+ 
