--- a/client/src/containers/EducationalDescription.css
+++ b/client/src/containers/EducationalDescription.css
@@ -42,7 +42,11 @@
 #video-container {
   display: flex;
   justify-content: space-evenly;
-  width: 90vw;
+  /* width: 90vw; */
+  padding: 0.5em;
+}
+
+#video-select {
   padding: 0.5em;
 }
 
