--- a/client/src/containers/EducationalDescription.css
+++ b/client/src/containers/EducationalDescription.css
@@ -8,36 +8,42 @@
     "section section section"
     "footer footer footer";
 
-
-  background-color:#40E0D0 ;
-  background-image: linear-gradient(#40E0D0 ,  #8A2BE2);
+  background-color: #40e0d0;
+  background-image: linear-gradient(#40e0d0, #8a2be2);
 }
 
 #heading {
   grid-area: header;
   /* background-color:#40E0D0 ;
   background-image: linear-gradient(#40E0D0 ,  #8A2BE2); */
+  font-size: 1em;
 }
 
 #content {
   grid-area: main;
   /* background-color: #8A2BE2;
   background-image: linear-gradient(#abd699, #8A2BE2); */
+  margin: 5px;
 }
 
 #links {
   grid-area: aside;
   /* background-color: pink; */
   /* border: 5px solid black; */
-
   margin-right: 5px;
+  margin-left: 5px;
+  display: flex;
+  justify-content: space-around;
 }
 
 #link-items {
   list-style-type: none;
   padding: 0.5em;
   border: 5px solid black;
-  
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
 }
 
 #media {
@@ -82,5 +88,51 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-right: 20px;
+  margin-right: 10px;
+}
+
+#video-h1 {
+  margin-top: 5px;
+}
+
+@media (max-width: 600px) {
+  #links {
+    font-size: 70%;
+  }
+  #heading {
+    font-size: 150%;
+  }
+  h2 {
+    font-size: 120%;
+  }
+}
+@media (max-width: 1024px) {
+  #description-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+
+    grid-template-areas:
+      "header header header "
+      "main main main"
+      "section section section"
+      "aside aside aside"
+      "footer footer footer";
+  }
+}
+@media (max-width: 1024px) {
+  #links {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  #link-items {
+    list-style-type: none;
+    padding: 0.5em;
+    border: 5px solid black;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    gap: 0;
+    width: 90%;
+  }
 }
