--- a/client/src/containers/EducationalDescription.css
+++ b/client/src/containers/EducationalDescription.css
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 50%;
+  width: 62%;
 }
 
 #media {
@@ -88,7 +88,7 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 
 #video-h1 {
@@ -106,7 +106,7 @@ img {
     font-size: 120%;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1135px) {
   #description-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -119,7 +119,8 @@ img {
       "footer footer footer";
   }
 }
-@media (max-width: 1024px) {
+
+@media (max-width: 1135px) {
   #links {
     display: flex;
     justify-content: space-around;
@@ -134,5 +135,10 @@ img {
     justify-content: space-around;
     gap: 0;
     width: 90%;
+  }
+}
+@media (max-width: 425px) {
+  .img-list {
+    flex-direction: column;
   }
 }
