--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -29,6 +29,16 @@
       color: rgba(255,255,255,.85); */
 
   padding-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-areas: 
+      "header header"
+      "pyramid pyramid"
+      "main main"
+      "footer footer";
+
+
+  
 
 
 }
@@ -39,7 +49,8 @@
   background-color: #40e0d0;
   background-image: linear-gradient(#40e0d0, #8a2be2);
 }
-h1 {
+#home-h1 {
+  grid-area: header;
   font-size: 4em;
   font-weight: 100;
   font-weight: bold;
@@ -51,6 +62,10 @@ h3 {
 
   font-weight: 300;
   line-height: 1.5;
+}
+
+#home-content {
+  grid-area: main;
 }
 p,
 li {
@@ -87,6 +102,7 @@ body {
 }
 
 PYRAMID CODE .stage {
+  grid-area: pyramid;
   -webkit-transform: scale(1.85);
   transform: scale(0.85);
   float: right;
@@ -183,19 +199,20 @@ PYRAMID CODE .stage {
   }
 }
 @media (max-width: 440px) {
-  h1 {
+  #home-h1 {
     line-height: 55px;
     font-size: 170%;
   }
 }
 @media (max-width: 460px) {
   .stage {
-    position: absolute;
+    position: relative;
     top: 25px;
     left: 50%;
-    margin-left: -45px;
+    margin-left: -300px;
+    margin-top: 25px;
   }
-  h1 {
+  #home-h1 {
     margin-top: 50px;
     text-align: center;
   }
@@ -204,7 +221,7 @@ PYRAMID CODE .stage {
   .stage {
     -webkit-transform: scale(0.55);
     transform: scale(0.55);
-    margin-right: 60px;
+    /* margin-right: 60px; */
   }
 }
 @media (min-width: 600px) {
@@ -214,7 +231,7 @@ PYRAMID CODE .stage {
   .stage {
     -webkit-transform: scale(0.68);
     transform: scale(0.68);
-    margin-right: 80px;
+    /* margin-right: 80px; */
   }
 }
 @media (min-width: 880px) {
